import {
  addLaunchOptionsProperty,
  addSceneConfigurationMethod,
  removeWindowStartup,
  setSceneManifest,
} from '../SceneDelegate';

// The template app delegate as generated by `expo prebuild`, before scene migration.
const LEGACY_APP_DELEGATE = `internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {
  var window: UIWindow?

  var reactNativeDelegate: ExpoReactNativeFactoryDelegate?
  var reactNativeFactory: RCTReactNativeFactory?

  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory

#if os(iOS) || os(tvOS)
    window = UIWindow(frame: UIScreen.main.bounds)
    factory.startReactNative(
      withModuleName: "main",
      in: window,
      launchOptions: launchOptions)
#endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
}
`;

describe(setSceneManifest, () => {
  it(`adds a default single-scene manifest`, () => {
    const result = setSceneManifest({});
    expect(result.UIApplicationSceneManifest).toEqual({
      UIApplicationSupportsMultipleScenes: false,
      UISceneConfigurations: {
        UIWindowSceneSessionRoleApplication: [
          {
            UISceneConfigurationName: 'Default Configuration',
            UISceneDelegateClassName: '$(PRODUCT_MODULE_NAME).SceneDelegate',
          },
        ],
      },
    });
  });

  it(`leaves an existing manifest untouched`, () => {
    const existing = { UIApplicationSceneManifest: { UIApplicationSupportsMultipleScenes: true } };
    expect(setSceneManifest({ ...existing })).toEqual(existing);
  });
});

describe(removeWindowStartup, () => {
  it(`comments out the window + startReactNative block`, () => {
    const result = removeWindowStartup(LEGACY_APP_DELEGATE);
    expect(result.didMerge).toBe(true);
    // The original startup is now inert.
    expect(result.contents).not.toMatch(/^\s*window = UIWindow\(frame/m);
    expect(result.contents).toContain('//     window = UIWindow(frame: UIScreen.main.bounds)\n');
    expect(result.contents).not.toMatch(/^[ \t]*window = UIWindow\(frame/m);
    expect(result.contents).toContain('// React Native is now started in SceneDelegate.swift.');
    expect(result.contents).toMatchSnapshot();
  });

  it(`is a no-op when there is no window startup to remove`, () => {
    const already = removeWindowStartup(LEGACY_APP_DELEGATE).contents;
    const result = removeWindowStartup(already);
    expect(result.didMerge).toBe(false);
    expect(result.contents).toBe(already);
  });
});

describe(addLaunchOptionsProperty, () => {
  it(`stores launchOptions for the scene delegate`, () => {
    const result = addLaunchOptionsProperty(LEGACY_APP_DELEGATE);
    expect(result.didMerge).toBe(true);
    expect(result.contents).toContain('var launchOptions: [UIApplication.LaunchOptionsKey: Any]?');
  });

  it(`is idempotent`, () => {
    const once = addLaunchOptionsProperty(LEGACY_APP_DELEGATE).contents;
    const twice = addLaunchOptionsProperty(once);
    expect(twice.didMerge).toBe(false);
    expect(twice.contents).toBe(once);
  });
});

describe(addSceneConfigurationMethod, () => {
  it(`adds the scene configuration method after didFinishLaunching`, () => {
    const result = addSceneConfigurationMethod(LEGACY_APP_DELEGATE);
    expect(result.didMerge).toBe(true);
    expect(result.contents).toContain('configurationForConnectingSceneSession');
    expect(result.contents).toContain('configuration.delegateClass = SceneDelegate.self');
    expect(result.contents).toMatchSnapshot();
  });

  it(`is idempotent`, () => {
    const once = addSceneConfigurationMethod(LEGACY_APP_DELEGATE).contents;
    const twice = addSceneConfigurationMethod(once);
    expect(twice.didMerge).toBe(false);
    expect(twice.contents).toBe(once);
  });
});

describe('full app delegate migration', () => {
  it(`produces a scene-based app delegate`, () => {
    let contents = removeWindowStartup(LEGACY_APP_DELEGATE).contents;
    contents = addLaunchOptionsProperty(contents).contents;
    contents = addSceneConfigurationMethod(contents).contents;
    expect(contents).toMatchSnapshot();
  });
});
