// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addSceneConfigurationMethod adds the scene configuration method after didFinishLaunching 1`] = `
"internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {
  var window: UIWindow?

  var reactNativeDelegate: ExpoReactNativeFactoryDelegate?
  var reactNativeFactory: RCTReactNativeFactory?

  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory

#if os(iOS) || os(tvOS)
    window = UIWindow(frame: UIScreen.main.bounds)
    factory.startReactNative(
      withModuleName: "main",
      in: window,
      launchOptions: launchOptions)
#endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
// @generated begin expo-scene-configuration - expo prebuild (DO NOT MODIFY) sync-981b69a3827e02b396c3c19a9f038d1c0076f280
  public override func application(
    _ application: UIApplication,
    configurationForConnectingSceneSession connectingSceneSession: UISceneSession,
    options: UIScene.ConnectionOptions
  ) -> UISceneConfiguration {
    let configuration = UISceneConfiguration(
      name: nil,
      sessionRole: connectingSceneSession.role)
    configuration.delegateClass = SceneDelegate.self
    return configuration
  }
// @generated end expo-scene-configuration
}
"
`;

exports[`full app delegate migration produces a scene-based app delegate 1`] = `
"internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {
  var window: UIWindow?

  var reactNativeDelegate: ExpoReactNativeFactoryDelegate?
  var reactNativeFactory: RCTReactNativeFactory?
// @generated begin expo-scene-launch-options - expo prebuild (DO NOT MODIFY) sync-e28526f651608466c48b6c30cb56327506dfd4c2
  var launchOptions: [UIApplication.LaunchOptionsKey: Any]?
// @generated end expo-scene-launch-options

  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory

    // React Native is now started in SceneDelegate.swift.
// #if os(iOS) || os(tvOS)
//     window = UIWindow(frame: UIScreen.main.bounds)
//     factory.startReactNative(
//       withModuleName: "main",
//       in: window,
//       launchOptions: launchOptions)
// #endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
// @generated begin expo-scene-configuration - expo prebuild (DO NOT MODIFY) sync-981b69a3827e02b396c3c19a9f038d1c0076f280
  public override func application(
    _ application: UIApplication,
    configurationForConnectingSceneSession connectingSceneSession: UISceneSession,
    options: UIScene.ConnectionOptions
  ) -> UISceneConfiguration {
    let configuration = UISceneConfiguration(
      name: nil,
      sessionRole: connectingSceneSession.role)
    configuration.delegateClass = SceneDelegate.self
    return configuration
  }
// @generated end expo-scene-configuration
}
"
`;

exports[`removeWindowStartup comments out the window + startReactNative block 1`] = `
"internal import Expo
import React
import ReactAppDependencyProvider

@main
class AppDelegate: ExpoAppDelegate {
  var window: UIWindow?

  var reactNativeDelegate: ExpoReactNativeFactoryDelegate?
  var reactNativeFactory: RCTReactNativeFactory?

  public override func application(
    _ application: UIApplication,
    didFinishLaunchingWithOptions launchOptions: [UIApplication.LaunchOptionsKey: Any]? = nil
  ) -> Bool {
    let delegate = ReactNativeDelegate()
    let factory = ExpoReactNativeFactory(delegate: delegate)
    delegate.dependencyProvider = RCTAppDependencyProvider()

    reactNativeDelegate = delegate
    reactNativeFactory = factory

    // React Native is now started in SceneDelegate.swift.
// #if os(iOS) || os(tvOS)
//     window = UIWindow(frame: UIScreen.main.bounds)
//     factory.startReactNative(
//       withModuleName: "main",
//       in: window,
//       launchOptions: launchOptions)
// #endif

    return super.application(application, didFinishLaunchingWithOptions: launchOptions)
  }
}
"
`;
